# Eat-Words

./: CMakeLists.txt  gre3000_random.xlsx  loadingwindow.cpp  loadingwindow.h  loadingwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  utils.cpp  utils.h
